# password-manager

./: Cargo.toml
.github/workflows/: rust-clippy.yml
data/: user.json
src/: encryption.rs  main.rs
src/authentication/: user.rs
src/cli/: app.rs
src/encryption/: hasher.rs  key_gen.rs  password_encryption.rs
src/passwords/: password.rs
