[package]
name = "password-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
colored = "3.0.0"
crossterm = "0.29.0"
hex = "0.4.3"
password-hash = "0.5.0"
rand = "0.8"
ratatui = "0.29.0"
serde = {version = "1.0.228", features=["derive"]}
serde_json = "1.0.145"

[dev-dependencies]
tempfile = "3.23.0"
